# pulumi-template

./: .env.local  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: pull_request.yml  push.yml
.makefiles/: install.mk  linteo.mk  pulumi.mk
pulumi/: Pulumi.yaml  __main__.py
pulumi/resources/: buckets.py
pulumi/scripts/: deploy-pulumi.sh  destroy-pulumi.sh  preview-pulumi.sh
scripts/: install_uv.sh  setup-pulumi.sh
