[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulumi-template"
version = "0.1.0"
description = "Pulumi + uv + CI"
readme = "README.md"
authors = [
    {name = "car7os", email = "carloscvl@hotmail.com"}
]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"

dependencies = [
    "pulumi>=3.181.0",
    "pulumi-aws>=6.1.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.13.0",
    "isort[colors]>=5.13.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "click>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pulumi*"]
exclude = ["cov*"]
